Answer a question for every part of the rule that raised it, and print it against its own subject
Review of #850. Two of the four are what the change is about, one level down from where it was
found.

A conjunction is one rule the author wrote, and `Required.and` unions what its conjuncts raise, so
two parts asking about one subject are one question. The evidence was per clause, so an end placed
by one part answered for the part beside it: `invariant mixed = value >= 1 && Int.abs(value) >= 2`
came back with nothing to say while the same two rules written apart were reported. That is what
#842 is about with `clause` where it said `reader`, and `Predicates.Owed` had already written the
same thing down — it carries `unreadable` beside the obligations because "reporting only the
obligations would say the invariant was proven when half of it was never read".

So each part is settled where it is classified, and a part nothing took in outranks every other
answer about the rule. The line one half draws is owed its row all the same: what the two halves
settle are different questions, and only one of them is left standing.

`StatedByClauses.tookIn` asked `speaksFor(p) && whyUnread(p) == null`, which is the same test twice
— `speaksFor` is `!unread.containsKey` — and true of every position a clause never mentioned. A
clause that said nothing here would have read every position of the value. It now asks what the
reading produced about the position.

A question is printed against its own subject. `Owed` carries one because the questions do not
share one — which values may stand somewhere is about a position, and a line is about a number
taken of it — and `Coverages` was dropping it and letting the finding fall back to the axis, which
is named after the second. A `String` bounded on its length is measured at the length, and a
question about which strings may stand there is about the string. `AxisCoverage.Unanswered` carries
the subject, the schema carries it, and nothing downstre